<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Forte Station Locator</string>
    <string name="action_settings">Settings</string>
    <string name="distance">Distance</string>
    <string name="splash_image">Splash screen image</string>
    <string name="splashtextview">Welcome. Preparing enviroment &#8230;</string>
    <string name="geofenceloaderservicelabel">Geofence Loader Service</string>
    <string name="menu_item_direction">Get Direction</string>
    <string name="btn_direction">Get Direction</string>
    <string name="switchprefsapp">Forte Service</string>
    <string name="settingforte">Setting</string>
    <string name="txtGeofenceRadius">Notification Distance</string>
    <string name="txtMessage">Set the radius from which you want to receive notification.</string>
    <string name="sending_geofence_objects">Sending Geofence Objects …</string>
    <string name="inflating_geofence_objects">Inflating Geofence files &#8230;</string>
    <string name="add_geofences_result_failure">Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="add_geofences_result_success">Add Geofences: Success GeofenceRequestIds=%1$s</string>
    <string name="connected">Client connected</string>
    <string name="disconnected">Client disconnected</string>
    <!-- Number patterns -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="geofence_transition_error_detail">Geofence transition error, code %1$d message %2$s.</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">Geofence transition error. Invalid type %1$d in geofences %2$s</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="geofence_transition_notification_title"> %1$s geofence(s) %2$s</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="add_geofences_already_requested_error"> Can\'t add geofences, previous request hasn\'t finished.</string>
    <string name="prefs_settings_title">Settings</string>
    <string name="list_prefs_summary">Send notification when in %1$s State</string>

</resources>